--- a/pages/project_portfolio.html
+++ b/pages/project_portfolio.html
@@ -92,7 +92,7 @@
     </section>
 
 <!-- Filter Section -->
-<section class="bg-surface py-6 sticky top-16 z-40 border-b border-secondary-200 shadow-sm">
+<section class="bg-surface py-6 top-16 z-40 border-b border-secondary-200 shadow-sm">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="bg-white rounded-lg shadow-card p-4">
             <div class="flex items-center justify-between mb-4">
