Adding header/footer, fixing homepage projects issues, adding content to homepage

--- a/pages/custom_panel_design.html
+++ b/pages/custom_panel_design.html
@@ -1162,18 +1162,18 @@
                         <!-- Quick Links -->
                         <div>
                             <h3
-                                class="text-lg font-sans font-semibold mb-4">دسترسی
-                                سریع</h3>
+                                class="text-lg font-sans font-semibold mb-4 text-white">دسترسی
+                                آسان</h3>
                             <ul class="space-y-2">
                                 <li><a href="project_portfolio.html"
                                         class="text-secondary-300 hover:text-accent transition-colors">لیست
                                         تمامی پروژه‌ها</a></li>
-                                <li><a href="custom_panel_design.html"
-                                        class="text-secondary-300 hover:text-accent transition-colors">درباره
-                                        ما</a></li>
                                 <li><a href="about_capabilities.html"
                                         class="text-secondary-300 hover:text-accent transition-colors">مستندات
                                         و گواهینامه‌ها</a></li>
+                                <li><a href="custom_panel_design.html"
+                                        class="text-secondary-300 hover:text-accent transition-colors">درباره
+                                        ما</a></li>
                                 <li><a href="technical_resources.html"
                                         class="text-secondary-300 hover:text-accent transition-colors">بلاگ</a></li>
                             </ul>
@@ -1182,15 +1182,14 @@
                         <!-- Contact Info -->
                         <div>
                             <h3
-                                class="text-lg font-sans font-semibold mb-4">Contact</h3>
+                                class="text-lg font-sans font-semibold mb-4 text-white">ارتباط با ما</h3>
                             <ul class="space-y-2 text-secondary-300">
                                 <li>021-88543614</li>
                                 <li>info@behsaztablo.ir</li>
                                 <li>24/7 پشتیبانی فوری</li>
                                 <li class="pt-2">
                                     <a href="contact_quote_request.html"
-                                        class="text-accent hover:text-accent-400 transition-colors font-sans font-semibold">Request
-                                        Quote →</a>
+                                        class="text-accent hover:text-accent-400 transition-colors font-sans font-semibold">درخواست پیشنهاد قیمت →</a>
                                 </li>
                             </ul>
                         </div>
@@ -1198,8 +1197,8 @@
 
                     <div
                         class="border-t border-secondary-700 mt-12 pt-8 text-center text-secondary-400">
-                        <p>&copy; 2025 ElectroPanel Pro. All Rights Reserved. |
-                            Powering Progress Since 1999</p>
+                        <p>&copy; Behsaz Tablo Asia. All Rights Reserved. |
+                            Powering Progress Since 2000</p>
                     </div>
                 </div>
             </footer>
