--- a/pages/contact_quote_request.html
+++ b/pages/contact_quote_request.html
@@ -13,9 +13,12 @@
     </head>
     <body class="font-sans text-text-primary bg-background">
         <!-- ADD THIS TOAST CONTAINER -->
-        <div id="toast-notification" class="fixed top-5 right-5 bg-success-600 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-x-3 opacity-0 transition-all duration-300 transform translate-y-[-20px]">
+        <div id="toast-notification"
+            class="fixed top-5 right-5 bg-success-600 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-x-3 opacity-0 transition-all duration-300 transform translate-y-[-20px]">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+                <path fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                    clip-rule="evenodd" />
             </svg>
             <span id="toast-message">Your message has been sent!</span>
         </div>
@@ -159,7 +162,10 @@
                                     ارسال کنند.</p>
                             </div>
 
-                            <form id="quote-form" name="contact" netlify class="space-y-6">
+                            <form id="quote-form"
+                                action="https://formspree.io/f/xyzdvbdy"
+                                method="POST" class="space-y-6"
+                                onsubmit="document.getElementById('submit-button').disabled = true; document.getElementById('submit-button').innerHTML = 'در حال ارسال...';">
                                 <!-- Contact Information -->
                                 <div
                                     class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -240,8 +246,7 @@
                                                 *</label>
                                             <select id="industry"
                                                 name="industry" required
-                                                class="input-field"
-                                                onchange="updateProjectFields()">
+                                                class="input-field">
                                                 <option value>انتخاب
                                                     صنعت</option>
                                                 <option
@@ -498,15 +503,23 @@
                                 <!-- Free Alternative: Link Input -->
                                 <div class="border-t border-secondary-200 pt-8">
                                     <div>
-                                        <label for="file-link" class="block text-sm font-sans font-semibold text-secondary-700 mb-2">لینک فایل‌های پیوست</label>
-                                        <input type="url" id="file-link" name="file-link" class="input-field" placeholder="لینک فایل را از گوگل درایو یا دراپ‌باکس جایگذاری کنید" />
-                                        <p class="mt-1 text-xs text-secondary-500">Please upload your files to a service like Google Drive and paste the shareable link here.</p>
+                                        <label for="file-link"
+                                            class="block text-sm font-sans font-semibold text-secondary-700 mb-2">لینک
+                                            فایل‌های پیوست</label>
+                                        <input type="url" id="file-link"
+                                            name="file-link" class="input-field"
+                                            placeholder="لینک فایل را از گوگل درایو یا دراپ‌باکس جایگذاری کنید" />
+                                        <p
+                                            class="mt-1 text-xs text-secondary-500">Please
+                                            upload your files to a service like
+                                            Google Drive and paste the shareable
+                                            link here.</p>
                                     </div>
                                 </div>
 
                                 <!-- Submit Button -->
                                 <div class="pt-6">
-                                    <button type="submit"
+                                    <button id="submit-button" type="submit"
                                         class="btn-accent w-full text-lg py-4">
                                         ثبت و ارسال درخواست
                                         <svg class="w-5 h-5 mr-2 inline"
@@ -616,63 +629,66 @@
                         <!-- Team Contacts -->
                         <div class="card-elevated">
                             <h3
-                                class="text-heading font-sans font-bold text-primary mb-6">Our
-                                Team</h3>
+                                class="text-heading font-sans font-bold text-primary mb-6">تیم ما</h3>
                             <div class="space-y-6">
-                                <div class="flex items-start">
+
+                                <!-- Michael Chen -->
+                                <!-- MODIFIED: Added gap-x-4 to the parent div -->
+                                <div class="flex items-start gap-x-4">
+                                    <!-- MODIFIED: Removed mr-4, added mt-1 -->
                                     <img
                                         src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=100&auto=format&fit=crop&ixlib=rb-4.0.3"
                                         alt="Michael Chen - Senior Engineering Manager"
-                                        class="w-12 h-12 rounded-full object-cover mr-4"
+                                        class="w-12 h-12 rounded-full object-cover mt-1"
                                         onerror="this.src='https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=100'; this.onerror=null;" />
                                     <div>
                                         <div
-                                            class="font-sans font-semibold text-primary">Michael
-                                            Chen</div>
+                                            class="font-sans font-semibold text-primary">ایمان ایرانی</div>
                                         <div
-                                            class="text-sm text-secondary-600">Senior
-                                            Engineering Manager</div>
+                                            class="text-sm text-secondary-600">Chief Executive Officer</div>
                                         <div
-                                            class="text-sm text-secondary-500">Custom
-                                            Design Requests</div>
+                                            class="text-sm text-secondary-500">ceo@behsaztablo.ir</div>
                                     </div>
                                 </div>
-                                <div class="flex items-start">
+
+                                <!-- Sarah Rodriguez -->
+                                <!-- MODIFIED: Added gap-x-4 to the parent div -->
+                                <div class="flex items-start gap-x-4">
+                                    <!-- MODIFIED: Removed mr-4, added mt-1 -->
                                     <img
                                         src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=100"
                                         alt="Sarah Rodriguez - Sales Specialist"
-                                        class="w-12 h-12 rounded-full object-cover mr-4"
-                                        onerror="this.src='https://images.unsplash.com/photo-1494790108755-2616b612b786?q=80&w=100&auto=format&fit=crop'; this.onerror=null;" />
-                                    <div>
-                                        <div
-                                            class="font-sans font-semibold text-primary">Sarah
-                                            Rodriguez</div>
-                                        <div
-                                            class="text-sm text-secondary-600">Sales
-                                            Specialist</div>
-                                        <div
-                                            class="text-sm text-secondary-500">Standard
-                                            Products</div>
-                                    </div>
-                                </div>
-                                <div class="flex items-start">
-                                    <img
-                                        src="https://images.pixabay.com/photo/2016/11/21/12/42/beard-1845166_1280.jpg"
-                                        alt="David Park - Emergency Coordinator"
-                                        class="w-12 h-12 rounded-full object-cover mr-4"
+                                        class="w-12 h-12 rounded-full object-cover mt-1"
                                         onerror="this.src='https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?q=80&w=100&auto=format&fit=crop'; this.onerror=null;" />
                                     <div>
                                         <div
-                                            class="font-sans font-semibold text-primary">David
-                                            Park</div>
+                                            class="font-sans font-semibold text-primary">میثم صمدالهی</div>
                                         <div
-                                            class="text-sm text-secondary-600">Emergency
-                                            Coordinator</div>
+                                            class="text-sm text-secondary-600">Marketing Manager</div>
                                         <div
-                                            class="text-sm text-secondary-500">24/7
-                                            Emergency Services</div>
+                                            class="text-sm text-secondary-500">MM@behsaztablo.ir</div>
                                     </div>
                                 </div>
+
+                                <!-- David Park -->
+                                <!-- MODIFIED: Added gap-x-4 to the parent div -->
+                                <div class="flex items-start gap-x-4">
+                                    <!-- MODIFIED: Removed mr-4, added mt-1 -->
+                                    <img
+                                        src="https://images.pixabay.com/photo/2016/11/21/12/42/beard-1845166_1280.jpg"
+                                        alt="David Park - Emergency Coordinator"
+                                        class="w-12 h-12 rounded-full object-cover mt-1"
+                                        onerror="this.src='https://images.unsplash.com/photo-1494790108375-2616b612b786?q=80&w=100&auto=format&fit=crop'; this.onerror=null;" />
+                                    <div>
+                                        <div
+                                            class="font-sans font-semibold text-primary">نگار کلخرانی</div>
+                                        <div
+                                            class="text-sm text-secondary-600">Senior Sales Specialist</div>
+                                        <div
+                                            class="text-sm text-secondary-500">SSS@behsaztablo.ir</div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
 
