--- a/pages/about_capabilities.html
+++ b/pages/about_capabilities.html
@@ -10,7 +10,7 @@
 </head>
 <body class="font-body text-text-primary bg-background">
     <!-- Navigation Header -->
-        <header class="bg-white shadow-card sticky top-0 z-50">
+        <header id="main-header" class="bg-white shadow-card sticky top-0 z-50 transition-all duration-300">
             <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between items-center h-16">
                     <!-- Logo -->
