About us hero, milestone and products completed

--- a/pages/contact_quote_request.html
+++ b/pages/contact_quote_request.html
@@ -35,12 +35,13 @@
                             class="flex items-center gap-x-3">
                             <!-- 3. Added logo with src, alt, and size -->
                             <img src="../assets/images/logo.webp"
-                                alt="Behsaz Tablo Asia Logo" class="h-14 w-auto">
+                                alt="Behsaz Tablo Asia Logo"
+                                class="h-14 w-auto">
                             <!-- 2. Text now comes first for RTL layout -->
                             <span
                                 class="text-xl font-sans font-bold text-primary">بهساز
                                 تابلو آسیا</span>
-                            
+
                         </a>
                     </div>
 
@@ -743,23 +744,30 @@
         </section>
 
         <!-- Regional Coverage Map -->
-<section class="py-20 bg-white">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="text-center mb-16">
-            <h2 class="text-display font-sans font-bold text-primary mb-4">آدرس دفتر مرکزی</h2>
-            <!-- <p class="text-body-lg text-secondary-600 max-w-3xl mx-auto">برای مشاوره حضوری ما را در نقشه پیدا کنید.</p> -->
-        </div>
+        <section class="py-20 bg-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center mb-16">
+                    <h2
+                        class="text-display font-sans font-bold text-primary mb-4">آدرس
+                        دفتر مرکزی</h2>
+                    <!-- <p class="text-body-lg text-secondary-600 max-w-3xl mx-auto">برای مشاوره حضوری ما را در نقشه پیدا کنید.</p> -->
+                </div>
 
-        <!-- This is the container that will make the map responsive -->
-        <div class="map-container rounded-lg overflow-hidden shadow-lg border border-gray-200">
-            <!-- 
+                <!-- This is the container that will make the map responsive -->
+                <div
+                    class="map-container rounded-lg overflow-hidden shadow-lg border border-gray-200">
+                    <!-- 
                 PASTE YOUR IFRAME CODE FROM GOOGLE MAPS HERE.
                 The example below is just a placeholder.
             -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1619.2869198101469!2d51.431484816114626!3d35.736697996518856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8dfd606c6b9da7%3A0x121bf84820d5806!2sBehsaz%20Tablou%20Asia!5e0!3m2!1sen!2sde!4v1757840037905!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
-</section>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1619.2869198101469!2d51.431484816114626!3d35.736697996518856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8dfd606c6b9da7%3A0x121bf84820d5806!2sBehsaz%20Tablou%20Asia!5e0!3m2!1sen!2sde!4v1757840037905!5m2!1sen!2sde"
+                        width="600" height="450" style="border:0;"
+                        allowfullscreen loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
 
         <!-- Footer -->
         <footer class="bg-secondary-900 text-white py-16">
