--- a/pages/contact_quote_request.html
+++ b/pages/contact_quote_request.html
@@ -45,27 +45,50 @@
                         </a>
                     </div>
 
-                    <!-- Desktop Navigation (MODIFIED) -->
-                    <div class="hidden md:block flex-grow">
-                        <div class="flex justify-end items-baseline gap-x-3">
-                            <a href="homepage.html"
-                                class="nav-link text-secondary-600 hover:text-primary font-sans px-3 py-2 rounded-md text-sm iran-sharp">خانه</a>
-                            <a href="project_portfolio.html"
-                                class="nav-link text-secondary-600 hover:text-primary font-sans px-3 py-2 rounded-md text-sm transition-colors">پروژه
-                                ها</a>
-                            <a href="custom_panel_design.html"
-                                class="nav-link text-secondary-600 hover:text-primary font-sans px-3 py-2 rounded-md text-sm transition-colors">گواهینامه
-                                ها</a>
-                            <a href="about_capabilities.html"
-                                class="nav-link text-secondary-600 hover:text-primary font-sans px-3 py-2 rounded-md text-sm transition-colors">درباره
-                                ما</a>
-                            <a href="technical_resources.html"
-                                class="nav-link text-secondary-600 hover:text-primary font-sans px-3 py-2 rounded-md text-sm transition-colors">بلاگ</a>
-                            <a href="contact_quote_request.html"
-                                class="btn-accent text-sm text-white">ثبت
-                                درخواست</a>
-                        </div>
-                    </div>
+                    <!-- Desktop Navigation (FINAL CORRECTED VERSION) -->
+<div class="hidden md:block flex-grow">
+    <div class="flex justify-end items-center gap-x-14">
+        
+        <a href="homepage.html" class="nav-link text-secondary-600 hover:text-primary font-sans text-sm iran-sharp">خانه</a>
+        
+        <!-- Dropdown 1: Projects -->
+        <div class="relative group">
+            <button class="nav-link flex items-center text-secondary-600 hover:text-primary font-sans text-sm transition-colors focus:outline-none">
+                <span>پروژه ها</span>
+                <!-- <svg class="w-4 h-4 ml-1 transition-transform duration-200 group-hover:rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg> -->
+            </button>
+            <!-- The Dropdown Menu (Simplified) -->
+            <div class="dropdown-menu">
+                <div class="p-1">
+                    <a href="project_portfolio.html" class="dropdown-item">همه پروژه‌ها</a>
+                    <a href="#" class="dropdown-item">پروژه‌های نفت و گاز</a>
+                    <a href="#" class="dropdown-item">پروژه‌های صنعتی</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Dropdown 2: Certifications -->
+        <div class="relative group">
+            <button class="nav-link flex items-center text-secondary-600 hover:text-primary font-sans text-sm transition-colors focus:outline-none">
+                <span>محصولات</span>
+                <!-- <svg class="w-4 h-4 ml-1 transition-transform duration-200 group-hover:rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg> -->
+            </button>
+            <div class="dropdown-menu">
+                <div class="p-1">
+                    <a href="#" class="dropdown-item">تابلو فشار ضعیف کشویی</a>
+                    <a href="#" class="dropdown-item">تابلو فشار ضعیف Sivacon</a>
+                    <a href="#" class="dropdown-item">تابلو فشار متوسط کشویی</a>
+                    <a href="#" class="dropdown-item">تابلو فشار متوسط Compact</a>
+                    <a href="#" class="dropdown-item">پست کیوسک</a>
+                </div>
+            </div>
+        </div>
+
+        <a href="about_capabilities.html" class="nav-link text-secondary-600 hover:text-primary font-sans text-sm">درباره ما</a>
+        <a href="technical_resources.html" class="nav-link text-secondary-600 hover:text-primary font-sans text-sm">بلاگ</a>
+        <a href="contact_quote_request.html" class="btn-accent text-sm text-white">ارتباط با ما</a>
+    </div>
+</div>
 
                     <!-- Mobile menu button -->
                     <div class="md:hidden">
@@ -127,7 +150,7 @@
             </div>
         </section>
 
-        <!-- Page Header -->
+        <!-- Page Header
         <section class="bg-primary text-white py-16 bg-contact">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h1 class="text-hero font-sans font-bold mb-6">با ما در ارتباط
@@ -151,6 +174,98 @@
                     </div>
                 </div>
             </div>
+        </section> -->
+        <!-- Hero Section -->
+        <section class="relative py-20 text-white overflow-hidden">
+            <!-- Layer 1: Background Image -->
+            <img src="../assets/images/about-us.webp"
+                alt="Engineer working on an electrical panel"
+                class="absolute inset-0 w-full h-full object-cover">
+
+            <!-- Layer 2: Dark Overlay -->
+            <div class="absolute inset-0 bg-primary bg-opacity-60"></div>
+
+            <!-- Layer 3: Text Content -->
+            <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center">
+                    <h1 class="text-hero font-sans font-bold mb-6 text-white">ارتباط با ما</h1>
+                    <p
+                        class="text-body-lg mb-8 max-w-3xl mx-auto opacity-90">شریک
+                        قابل اعتماد شما در زیرساخت‌های برق، ارائه‌دهنده
+                        راه‌حل‌های مهندسی‌شده با دقت که عملیات حیاتی را در صنایع
+                        مختلف به‌کار می‌اندازند.</p>
+
+                    <div
+                        class="flex flex-col sm:flex-row gap-4 justify-center mt-12">
+
+                        <!-- Card 1: Phone Number (Clickable) -->
+                        <div
+                            class="relative bg-white bg-opacity-10 rounded-lg backdrop-blur-sm border border-white/20 text-right w-full sm:w-auto transition-all duration-300 hover:bg-opacity-20 hover:border-white/40">
+                            <a href="tel:+982188543614" class="block p-6">
+                                <div
+                                    class="flex items-center justify-between mb-2">
+                                    <p
+                                        class="font-sans font-semibold text-lg">شماره
+                                        تماس</p>
+                                    <svg class="w-8 h-8 text-accent"
+                                        fill="currentColor" viewBox="0 0 20 20">
+                                        <path
+                                            d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+                                    </svg>
+                                </div>
+                                <p class="opacity-80" dir="ltr">021-88543614 -
+                                    09123456789</p>
+                            </a>
+                        </div>
+
+                        <!-- Card 2: Email (NOW CLICKABLE) -->
+                        <div
+                            class="relative bg-white bg-opacity-10 rounded-lg backdrop-blur-sm border border-white/20 text-right w-full sm:w-auto transition-all duration-300 hover:bg-opacity-20 hover:border-white/40">
+                            <!-- WRAPPED content in an <a> tag with mailto: -->
+                            <a href="mailto:info@behsaztablo.ir"
+                                class="block p-6">
+                                <div
+                                    class="flex items-center justify-between mb-2">
+                                    <p
+                                        class="font-sans font-semibold text-lg">ایمیل</p>
+                                    <svg class="w-8 h-8 text-accent"
+                                        fill="currentColor" viewBox="0 0 20 20">
+                                        <path
+                                            d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                                        <path
+                                            d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+                                    </svg>
+                                </div>
+                                <p class="opacity-80">info@behsaztablo.ir</p>
+                            </a>
+                        </div>
+
+                        <!-- Card 3: Location (Clickable) -->
+                        <div
+                            class="relative bg-white bg-opacity-10 rounded-lg backdrop-blur-sm border border-white/20 text-right w-full sm:w-auto transition-all duration-300 hover:bg-opacity-20 hover:border-white/40">
+                            <a
+                                href="https://www.google.com/maps/search/?api=1&query=Behsaz+Tablo+Asia+Tehran"
+                                target="_blank" rel="noopener noreferrer"
+                                class="block p-6">
+                                <div
+                                    class="flex items-center justify-between mb-2">
+                                    <p
+                                        class="font-sans font-semibold text-lg">دفتر
+                                        مرکزی</p>
+                                    <svg class="w-8 h-8 text-accent"
+                                        fill="currentColor" viewBox="0 0 20 20">
+                                        <path fill-rule="evenodd"
+                                            d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                                            clip-rule="evenodd" />
+                                    </svg>
+                                </div>
+                                <p class="opacity-80">تهران، خیابان نیلوفر</p>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Main Content -->
@@ -162,8 +277,7 @@
                         <div class="card-elevated">
                             <div class="mb-8">
                                 <h2
-                                    class="text-display font-sans font-bold text-primary mb-4">درخواست
-                                    پیشنهاد قیمت</h2>
+                                    class="text-display font-sans font-bold text-primary mb-4">طرح پرسش / درخواست پیشنهاد قیمت</h2>
                                 <p class="text-secondary-600">نیازمندی‌های
                                     پروژ‌ه‌تان را با ما در میان بگذارید تا تیم
                                     فنی مهندسی ما در اسرع وقت مشخصات فنی، جدول
@@ -244,17 +358,16 @@
                                 <!-- Project Information -->
                                 <div class="border-t border-secondary-200 pt-8">
                                     <h3
-                                        class="text-heading font-sans font-bold text-primary mb-6">جزئیات
-                                        پروژه</h3>
+                                        class="text-heading font-sans font-bold text-primary mb-6">جزئیات پروژه (اختیاری)</h3>
 
                                     <div
                                         class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                         <div>
                                             <label for="industry"
                                                 class="block text-sm font-sans font-semibold text-secondary-700 mb-2">صنعت
-                                                *</label>
+                                                </label>
                                             <select id="industry"
-                                                name="industry" required
+                                                name="industry"
                                                 class="input-field">
                                                 <option value>انتخاب
                                                     صنعت</option>
@@ -277,9 +390,9 @@
                                         <div>
                                             <label for="projectType"
                                                 class="block text-sm font-sans font-semibold text-secondary-700 mb-2">نوع
-                                                پروژه *</label>
+                                                پروژه </label>
                                             <select id="projectType"
-                                                name="projectType" required
+                                                name="projectType"
                                                 class="input-field">
                                                 <option value>انتخاب نوع
                                                     پروژه</option>
@@ -309,9 +422,9 @@
                                         <div>
                                             <label for="timeline"
                                                 class="block text-sm font-sans font-semibold text-secondary-700 mb-2">زمان‌بندی
-                                                پروژه *</label>
+                                                پروژه </label>
                                             <select id="timeline"
-                                                name="timeline" required
+                                                name="timeline"
                                                 class="input-field">
                                                 <option value>انتخاب
                                                     زمان‌بندی</option>
@@ -459,10 +572,9 @@
                                 <div class="border-t border-secondary-200 pt-8">
                                     <div>
                                         <label for="description"
-                                            class="block text-sm font-sans font-semibold text-secondary-700 mb-2">توضیحات
-                                            پروژه *</label>
+                                            class="block text-sm font-sans font-semibold text-secondary-700 mb-2">توضیحات پرسش / پروژه</label>
                                         <textarea id="description"
-                                            name="description" rows="4" required
+                                            name="description" rows="4"
                                             class="input-field"
                                             placeholder="لطفاً نیازمندی‌های پروژه، زیرساخت‌های موجود، و هرگونه چالش یا محدودیت خاص را شرح دهید"></textarea>
                                     </div>
@@ -530,7 +642,7 @@
                                 <div class="pt-6">
                                     <button id="submit-button" type="submit"
                                         class="btn-accent w-full text-lg py-4">
-                                        ثبت و ارسال درخواست
+                                        ثبت و ارسال
                                         <svg class="w-5 h-5 mr-2 inline"
                                             fill="none" stroke="currentColor"
                                             viewBox="0 0 24 24">
@@ -541,9 +653,7 @@
                                         </svg>
                                     </button>
                                     <p
-                                        class="mt-3 text-sm text-secondary-500 text-center">تا
-                                        24 ساعت آینده پیشنهاد خود را ارائه
-                                        خواهیم داد</p>
+                                        class="mt-3 text-sm text-secondary-500 text-center">تیم تخصصی ما در کوتاه‌ترین زمان پاسخگوی سوالات شما خواهد بود.</p>
                                 </div>
                             </form>
                         </div>
@@ -710,7 +820,7 @@
                             </div>
                         </div>
 
-                        <!-- Recent Projects -->
+                        <!-- Recent Projects
                         <div class="card-elevated">
                             <h3
                                 class="text-heading font-sans font-bold text-primary mb-6">پروژه‌های
@@ -737,7 +847,7 @@
                                         class="text-sm text-secondary-600 mt-1">"Professional team that understood our constraints."</div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
